# r01_cli

./: .gitignore  Cargo.toml  test.rest
assets/: README.md
fixtures/: b64.txt  blake3.txt
src/: csvs.rs  lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
